# MRI-Segmentation

./: .gitignore  README.md  heart_segmentation.py  heart_segmentation_gui.py  heart_segmentation_no_subsection.py  install_lung.sh  lung.py  lung_segmentation.py  lung_segmentation_gui.py  pyproject.toml  requirements.txt
